fix(web): patch login page for dark mode (#3060)

--- a/apps/web/src/app/(logged-out)/_components/LoggedOutWrapper/Login.scss
+++ b/apps/web/src/app/(logged-out)/_components/LoggedOutWrapper/Login.scss
@@ -17,7 +17,6 @@
 
   .card {
     background-color: #141414;
-    color: hsl(var(--muted-content));
   }
 
   .border,
